@@ -3,6 +3,7 @@
 #  Date:  18-May-2021 jdw
 #
 #  Updates:
+#   12-Jun-2023  dwp Set useCache default to False to force redownloading of holdings files
 #
 ##
 """Provide inventory of current repository content.
@@ -24,7 +25,7 @@ logger = logging.getLogger(__name__)
 class CurrentHoldingsProvider(object):
     """Provide inventory of current repository content."""
 
-    def __init__(self, cachePath, useCache, **kwargs):
+    def __init__(self, cachePath, useCache=False, **kwargs):
         self.__cachePath = cachePath
         self.__dirPath = os.path.join(cachePath, "holdings")
         #
