@@ -34,3 +34,4 @@
 14-Feb-2023 - V0.38 Add support for requesting specific inputIdCodeList/idCodeList for CSMs
 22-Mar-2023 - V0.39 Update references to py-rcsb_exdb_assets master branch
 19-May-2023 - V0.40 Update DNS to PDB archive
+12-Jun-2023 - V0.41 Disable useCache for holdings files to force re-download
